syntax = "proto3";

option go_package = "/protobuf";

import "google/protobuf/empty.proto";

package cart;

service ShoppingCartService {
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  rpc AddItem(AddItemRequest) returns (google.protobuf.Empty);
  rpc UpdateItem(UpdateItemRequest) returns (google.protobuf.Empty);
  rpc RemoveItem(RemoveItemRequest) returns (google.protobuf.Empty);
  rpc ClearCart(ClearCartRequest) returns (google.protobuf.Empty);
}

message CartItem {
  int64 product_id = 1;
  double price = 3;
  int32 quantity = 4;
}

message GetCartRequest {
  int64 user_id = 1;
}

message GetCartResponse {
  repeated CartItem items = 1;
}

message AddItemRequest {
  int64 user_id = 1;
  CartItem item = 2;
}

message UpdateItemRequest {
  int64 user_id = 1;
  CartItem item = 2;
}

message RemoveItemRequest {
  int64 user_id = 1;
  int64 product_id = 2;
}

message ClearCartRequest {
  int64 user_id = 1;
}