syntax = "proto3";

option go_package = "/protobuf";

import "google/api/annotations.proto";

package product;

service ProductCatalogService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/api/v1/products/{id}"
    };
  };
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/api/v1/products"
    };
  };
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/api/v1/products"
      body: "*"
    };
  };
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {
    option (google.api.http) = {
      patch: "/api/v1/products/{id}"
      body: "*"
    };
  };
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {
    option (google.api.http) = {
      delete: "/api/v1/products/{id}"
    };
  };
  rpc GetProductBySKU(GetProductBySKURequest) returns (GetProductBySKUResponse);
}

message Product {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  Currency currency = 6;
  int32 stock_quantity = 7;
  string category = 8;
  string image_url = 9;
  map<string, string> attributes = 10;
  bool is_active = 11;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  string query = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  string sku = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  Currency currency = 5;
  int32 stock_quantity = 6;
  string category = 7;
  string image_url = 8;
  map<string, string> attributes = 9;
}

message CreateProductResponse {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  Currency currency = 6;
  int32 stock_quantity = 7;
  string category = 8;
  string image_url = 9;
  map<string, string> attributes = 10;
}

message UpdateProductResponse {
  Product product = 1;
}

message  DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {}

message GetProductBySKURequest {
  string sku = 1;
}

message GetProductBySKUResponse {
  Product product = 1;
}

enum Currency {
  EUR=0;
  USD=1;
}